# muffy

./: .gitmodules  .goreleaser.yaml  Cargo.toml  Dockerfile  README.md  action.yaml  cspell.json  goreleaser.yaml  muffy.local.toml  muffy.toml
.github/: dependabot.yaml
.github/workflows/: bench.yaml  document.yaml  lint.yaml  release.yaml  test.yaml
doc/: astro.config.ts  package-lock.json  package.json  pnpm-lock.yaml
doc/public/: manifest.json
doc/tools/: image.sh  usage.sh
document/: Cargo.toml
document/src/: html.rs  lib.rs
document/src/html/: document.rs  element.rs  node.rs  parse.rs
examples/: config.yaml  muffy.toml
muffy/: Cargo.toml
muffy-document/: Cargo.toml
muffy-document/benches/: main.rs
muffy-document/src/html/: parse.rs
muffy-rnc/: Cargo.toml
muffy-rnc/src/: lib.rs  parse.rs
muffy-validation/: Cargo.toml
muffy-validation-macro/: Cargo.toml
muffy-validation-macro/src/: lib.rs
muffy-validation/src/: error.rs  lib.rs
muffy/benches/: main.rs
muffy/src/: cache.rs  config.rs  document_output.rs  document_type.rs  element.rs  element_output.rs  error.rs  html_parser.rs  http_client.rs  item_output.rs  lib.rs  main.rs  rate_limiter.rs  render.rs  request.rs  response.rs  sitemap.rs  timer.rs  web_validator.rs
muffy/src/cache/: fjall.rs  memory.rs  moka.rs  sled.rs  utility.rs
muffy/src/config/: error.rs  serde.rs  toml.rs
muffy/src/http_client/: cached_response.rs  reqwest.rs  stub.rs
muffy/src/render/: document_output.rs  element_output.rs  response.rs  result.rs
muffy/src/sitemap/: error.rs
muffy/src/snapshots/: muffy__render__tests__json__render.snap  muffy__render__tests__json__render_success.snap  muffy__render__tests__json__render_success_and_error_with_verbose_option.snap  muffy__render__tests__json__render_successful_element.snap  muffy__render__tests__json__render_with_verbose_option.snap  muffy__render__tests__text__render.snap  muffy__render__tests__text__render_error.snap  muffy__render__tests__text__render_success_and_error_with_verbose_option.snap  muffy__render__tests__text__render_success_with_verbose_option.snap  muffy__render__tests__text__render_successful_element.snap  muffy__render__tests__text__render_with_verbose_option.snap
muffy/src/timer/: stub.rs
muffy/src/web_validator/: context.rs
rnc/: Cargo.toml
rnc/src/: ast.rs  lib.rs  parse.rs
rnc/src/parse/: error.rs  parser.rs
rnc/src/snapshots/: muffy_rnc__parse__tests__schema__html5__applications.rnc.snap  muffy_rnc__parse__tests__schema__html5__aria.rnc.snap  muffy_rnc__parse__tests__schema__html5__block.rnc.snap  muffy_rnc__parse__tests__schema__html5__common.rnc.snap  muffy_rnc__parse__tests__schema__html5__core-scripting.rnc.snap  muffy_rnc__parse__tests__schema__html5__data.rnc.snap  muffy_rnc__parse__tests__schema__html5__embed.rnc.snap  muffy_rnc__parse__tests__schema__html5__form-datatypes.rnc.snap  muffy_rnc__parse__tests__schema__html5__html5.rnc.snap  muffy_rnc__parse__tests__schema__html5__html5exclusions.rnc.snap  muffy_rnc__parse__tests__schema__html5__media.rnc.snap  muffy_rnc__parse__tests__schema__html5__meta.rnc.snap  muffy_rnc__parse__tests__schema__html5__microdata.rnc.snap  muffy_rnc__parse__tests__schema__html5__phrase.rnc.snap  muffy_rnc__parse__tests__schema__html5__rdfa.rnc.snap  muffy_rnc__parse__tests__schema__html5__revision.rnc.snap  muffy_rnc__parse__tests__schema__html5__ruby.rnc.snap  muffy_rnc__parse__tests__schema__html5__sectional.rnc.snap  muffy_rnc__parse__tests__schema__html5__structural.rnc.snap  muffy_rnc__parse__tests__schema__html5__tables.rnc.snap  muffy_rnc__parse__tests__schema__html5__web-components.rnc.snap  muffy_rnc__parse__tests__schema__html5__web-forms-scripting.rnc.snap  muffy_rnc__parse__tests__schema__html5__web-forms.rnc.snap  muffy_rnc__parse__tests__schema__html5__web-forms2-scripting.rnc.snap  muffy_rnc__parse__tests__schema__html5__web-forms2.rnc.snap  muffy_rnc__parse__tests__schema__html5__xhtml5.rnc.snap  muffy_rnc__parse__tests__schema__its2__its20-html5-types.rnc.snap  muffy_rnc__parse__tests__schema__its2__its20-html5.rnc.snap  muffy_rnc__parse__tests__schema__mml3__mathml3-common.rnc.snap  muffy_rnc__parse__tests__schema__mml3__mathml3-content.rnc.snap  muffy_rnc__parse__tests__schema__mml3__mathml3-inc.rnc.snap  muffy_rnc__parse__tests__schema__mml3__mathml3-presentation.rnc.snap  muffy_rnc__parse__tests__schema__mml3__mathml3-strict-content.rnc.snap  muffy_rnc__parse__tests__schema__mml3__mathml3.rnc.snap  muffy_rnc__parse__tests__schema__svg11__inkscape-draft.rnc.snap  muffy_rnc__parse__tests__schema__svg11__inkscape.rnc.snap  muffy_rnc__parse__tests__schema__svg11__svg-animation.rnc.snap  muffy_rnc__parse__tests__schema__svg11__svg-animevents-attrib.rnc.snap  muffy_rnc__parse__tests__schema__svg11__svg-basic-clip.rnc.snap  muffy_rnc__parse__tests__schema__svg11__svg-basic-filter.rnc.snap  (+168 more)
src/: cache.rs  cached_http_client.rs  clock_timer.rs  config.rs  context.rs  document.rs  document_output.rs  document_type.rs  element.rs  element_output.rs  enriched_http_client.rs  error.rs  full_http_client.rs  html_parser.rs  http_client.rs  lib.rs  main.rs  metrics.rs  page.rs  rate_limiter.rs  render.rs  request.rs  reqwest_http_client.rs  response.rs  robot_list.rs  success.rs  test.rs  timer.rs  utility.rs  validation.rs  web_validator.rs
src/cache/: cache.rs  file_system.rs  fjall.rs  memory.rs  moka.rs  sled.rs
src/config/: error.rs  serde.rs
src/html_parser/: node.rs
src/http_client/: bare.rs  cached.rs  cached_http_client.rs  cached_response.rs  error.rs  reqwest.rs  reqwest_http_client.rs  stub.rs
src/render/: document_output.rs  element_output.rs  elemetn_output.rs  item_output.rs  options.rs  render.rs  response.rs  success.rs
src/snapshots/: muffy__render__tests__json__render_successful_element.snap  muffy__render__tests__json__render_with_verbose_option.snap  (+8 more)
tools/: coverage.sh  docker.sh  release.sh
validation/: Cargo.toml
validation-macro/: Cargo.toml  build.rs
validation-macro/src/: error.rs  lib.rs  schema
validation/src/: error.rs  lib.rs
(+47 files in other folders)
