[package]
name = "muffy"
description = "The static website validator"
repository = "https://github.com/raviqqe/muffy"
keywords = ["web"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
version = "0.1.8"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.88"
bitcode = { version = "0.6.6", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
dashmap = "6.1.0"
dirs = "6.0.0"
futures = "0.3.31"
html5ever = "0.27.0"
http = "1.3.1"
http-serde = "2.1.1"
insta = "1.43.1"
itertools = "0.14.0"
markup5ever = "0.16.1"
markup5ever_rcdom = "0.3.0"
reqwest = { version = "0.12.15", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
] }
rlimit = "0.10.2"
robotxt = "0.6.1"
scc = "2.3.4"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
sitemaps = "0.2.0"
sled = "0.34.7"
tabled = "0.19.0"
tokio = { version = "1.45.0", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tokio-stream = "0.1.17"
url = { version = "2.5.4", features = ["serde"] }
yaml-rust2 = "0.10.1"

[lints.rust]
missing_docs = "deny"
warnings = "deny"

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

alloc_instead_of_core = "deny"
dbg_macro = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
explicit_deref_methods = "deny"
if_not_else = "deny"
manual_let_else = "deny"
missing_const_for_fn = "deny"
missing_panics_doc = "deny"
multiple_crate_versions = { level = "allow", priority = 1 }
option_if_let_else = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unnecessary_safety_comment = "deny"
unused_self = "deny"
use_self = "deny"

[dev-dependencies]
indoc = "2.0.6"
pretty_assertions = "1.4.1"
tempfile = "3.19.1"
