[package]
name = "muffy"
description = "The static website validator"
repository = "https://github.com/raviqqe/muffy"
keywords = ["web"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
version = "0.1.12"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.88"
bitcode = { version = "0.6.6", features = ["serde"] }
clap = { version = "4.5.37", features = ["cargo", "derive"] }
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
html5ever = "0.27.0"
http = "1.3.1"
http-serde = "2.1.1"
itertools = "0.14.0"
log = "0.4.27"
markup5ever_rcdom = "0.3.0"
moka = { version = "0.12.10", features = ["future"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls-webpki-roots",
] }
rlimit = "0.10.2"
robotxt = "0.6.1"
scc = "2.3.4"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
sitemaps = "0.2.0"
sled = "0.34.7"
tabled = "0.19.0"
tokio = { version = "1.45.0", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tokio-stream = "0.1.17"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
indoc = "2.0.6"
insta = "1.43.1"
pretty_assertions = "1.4.1"
tempfile = "3.19.1"

[lints.rust]
missing_docs = "deny"
warnings = "deny"

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

alloc_instead_of_core = "deny"
dbg_macro = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
explicit_deref_methods = "deny"
if_not_else = "deny"
manual_let_else = "deny"
missing_const_for_fn = "deny"
missing_panics_doc = "deny"
multiple_crate_versions = { level = "allow", priority = 1 }
option_if_let_else = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unnecessary_safety_comment = "deny"
unused_self = "deny"
use_self = "deny"
