[package]
name = "muffy-document"
version.workspace = true
edition.workspace = true
description = "Document types"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[dev-dependencies]

[lints]
workspace = true
