[package]
name = "muffy-document"
version.workspace = true
edition.workspace = true
description = "Document types"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bench]]
harness = false
name = "main"

[dependencies]
html5ever = "0.39.0"
markup5ever_rcdom = "0.39.0"

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "5.0.1" }
pretty_assertions = "1.4.1"

[lints]
workspace = true
