[package]
name = "muffy-validation"
version.workspace = true
edition.workspace = true
description = "Document validation for Muffy"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
muffy-document = { version = "0.3.9", path = "../muffy-document" }
muffy-validation-macro = { version = "0.3.9", path = "../muffy-validation-macro" }

[lints]
workspace = true
