[package]
name = "muffy-validation"
version.workspace = true
edition.workspace = true
description = "Document validation for Muffy"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
muffy-document = { version = "0.3.11", path = "../muffy-document" }
muffy-validation-macro = { version = "0.3.11", path = "../muffy-validation-macro" }
regex = "1.12.3"

[lints]
workspace = true
