[package]
name = "muffy"
version.workspace = true
edition.workspace = true
description = "The static website validator"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bench]]
harness = false
name = "main"
required-features = ["integration-bench"]

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
bitcode = { version = "0.6.9", features = ["serde"] }
clap = { version = "4.6.1", features = ["cargo", "derive"] }
colored = "3.1.1"
dirs = "6.0.0"
duration-string = { version = "0.5.3", features = ["serde"] }
env_logger = "0.11.10"
fjall = "3.1.5"
futures = "0.3.32"
http = "1.4.2"
http-serde = "2.1.1"
itertools = "0.15.0"
log = "0.4.32"
moka = { version = "0.12.15", features = ["future"] }
muffy-document = { path = "../muffy-document", version = "0.3.16" }
muffy-validation = { path = "../muffy-validation", version = "0.3.16" }
petgraph = "0.8.3"
quick-xml = "0.41.0"
regex = "1.12.4"
reqwest = {
  version = "0.12.28",
  default-features = false,
  features = ["rustls-tls-webpki-roots"]
}
rlimit = "0.11.0"
robotxt = "0.6.1"
scc = "3.7.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
sled = "0.34.7"
tabled = "0.21.0"
tokio = {
  version = "1.52.3",
  features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
  ]
}
tokio-stream = "0.1.18"
toml = "1.1.2"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
criterion = {
  package = "codspeed-criterion-compat",
  version = "5.0.1",
  features = ["async_tokio"]
}
indoc = "2.0.7"
insta = "1.47.2"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"

[features]
integration-bench = []

[lints]
workspace = true
