[package]
name = "muffy-rnc"
version.workspace = true
edition.workspace = true
description = "Relax NG Compact Syntax parser"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
glob = "0.3.3"
nom = "8.0.0"
rstest = "0.26.1"

[lints]
workspace = true
