[package]
name = "muffy-rnc"
version.workspace = true
edition.workspace = true
description = "Relax NG Compact Syntax parser"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nom = "8.0.0"

[dev-dependencies]
indoc = "2.0.6"
rstest = "0.26.1"

[lints]
workspace = true
