[package]
name = "muffy-validation-macro"
version.workspace = true
edition.workspace = true
description = "Macros for document validation in Muffy"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
muffy-rnc = { version = "0.3.5", path = "../rnc" }
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.117"

[lints]
workspace = true
