[package]
name = "muffy-validation-macro"
version.workspace = true
edition.workspace = true
description = "Macros for document validation in Muffy"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.45"

[lints]
workspace = true
